[package]
name = "h2n5"
version = "0.1.3"
license = "MIT/Apache-2.0"
authors = [
	"Andrew Champion <andrew.champion@gmail.com>",
	"Chris Barnes <barnesc@janelia.hhmi.org>",
]
description = "HTTP 2 N5: Serve N5 datasets over HTTP as tiled image stacks"
readme = "README.md"
repository = "https://github.com/aschampion/h2n5"
keywords = ["n5"]
categories = ["command-line-utilities", "science"]

[dependencies]
actix-web = "0.7"
image = "0.19"
n5 = "0.4"
ndarray = "0.12"
num-traits = "0.2"
regex = "1.2"
structopt = "0.2"
