[package]
name = "h2n5"
version = "0.1.7"
edition = "2018"
rust-version = "1.46"
license = "MIT/Apache-2.0"
authors = [
	"Andrew Champion <andrew.champion@gmail.com>",
	"Chris Barnes <barnesc@janelia.hhmi.org>",
]
description = "HTTP 2 N5: Serve N5 datasets over HTTP as tiled image stacks"
readme = "README.md"
repository = "https://github.com/aschampion/h2n5"
keywords = ["n5"]
categories = ["command-line-utilities", "science"]

[dependencies]
actix-web = "1.0.9"
actix-service = "0.4"
actix-cors = "0.1"
anymap = "0.12"
env_logger = "0.7"
lru-cache = "0.1.2"
n5 = "0.7"
ndarray = "0.13"
num-traits = "0.2"
regex = "1.3"
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png"]

[profile.release]
lto=true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/h2n5-{ target }.tgz"
bin-dir = "{ bin }-{ target }{ format }"
